Atts Links/imagem/estilos

--- a/temporary/index.html
+++ b/temporary/index.html
@@ -31,7 +31,11 @@
     <main class="container">
         <header>
             <img class="logo" src="assets/logo_bq.svg" alt="Logo Bruno Queirós" srcset="">
-            <img class="foto-perfil" src="assets/foto_bq_medias_6.jpg" alt="Foto de perfil do Bruno Queirós" srcset="">
+            <a href="https://www.linkedin.com/in/itsbrunoqueiros/" target="blank">
+                <div class="foto-perfil-wrap">
+                    <div class="foto-perfil" alt="Foto de perfil do Bruno Queirós"></div>
+                </div>
+            </a>
         </header>
         <section class="chamada">
             <div class="row">
@@ -51,10 +55,10 @@
             </p>
             <ul>
                 <li> <a href="https://dribbble.com/itsbrunoqueiros" target="blank"> Dribbble </a> </li>
-                <li> <a href="https://www.behance.net/itsbrunoqueiros" arget="blank"> Behance </a> </li>
-                <li> <a href="https://www.linkedin.com/in/itsbrunoqueiros/" arget="blank"> LinkedIn </a> </li>
-                <li> <a href="https://medium.com/@brunoqueiros" arget="blank"> Medium </a> </li>
-                <li> <a href="https://github.com/bqdesigner" arget="blank"> Github </a> </li>
+                <li> <a href="https://www.behance.net/itsbrunoqueiros" target="blank"> Behance </a> </li>
+                <li> <a href="https://www.linkedin.com/in/itsbrunoqueiros/" target="blank"> LinkedIn </a> </li>
+                <li> <a href="https://medium.com/@brunoqueiros" target="blank"> Medium </a> </li>
+                <li> <a href="https://github.com/bqdesigner" target="blank"> Github </a> </li>
             </ul>
         </footer>
     </main>
