--- a/v1/index.html
+++ b/v1/index.html
@@ -43,5 +43,57 @@
             </ul>
         </nav>
     </header>
+    <main class="container">
+        <section id="presentation">
+            <h1> 
+                Hey, sou o Bruno <br/>
+                Designer de Produtos Digitais 👋
+            </h1>
+            <p>
+                Ajudo empresas e clientes a chegarem no próximo nível em seus produtos, com pesquisa, validação e interfaces incríveis. Quer saber mais? Confira meus trabalhos 👇
+            </p>
+        </section>
+        <section id="jobs-done">
+            <h2> Projetos realizados </h2>
+            
+        </section>
+        <section id="profile">
+            <h2> Muito Prazer! 🤟 </h2>
+            <p> Atualmente sou Product Designer na Dasa, uma empresa na área da saúde. Trabalhei em startups/empresas nas áreas de Criptomoedas, Logística, Streaming e Consultoria. </p>
+            <div class="row">
+                <div class="col-md-6 col-12">
+                    <h3> Últimas Experiências </h3>
+
+                </div>
+                <div class="col-md-6 col-12">
+                    <h3> General Skills </h3>
+                    <ul>
+                        <li> Product Design </li>
+                        <li> User Experience</li>
+                        <li> Acessibilidade </li>
+                        <li> Web Design </li>
+                        <li> Design Leadership </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row social-media">
+                <ul>
+                    <li><a href="#"> Dribbble </a></li>
+                    <li><a href="#"> Behance </a></li>
+                    <li><a href="#"> LinkedIn</a></li>
+                </ul>
+            </div>
+        </section>
+    </main>
+    <footer class="container">
+        <div class="row">
+            <h2> Vamos bater <br/> um papo? 🙌 </h2>
+            <a href="#"> Entre em contato </a>
+        </div>
+        <div class="row">
+            <span> Bruno Queirós • 2020 </span>
+        </div>
+    </footer>
+
 </body>
 </html>
