New style from home page

--- a/v1/index.html
+++ b/v1/index.html
@@ -29,7 +29,7 @@
 <body>
     <header class="container-fluid">
         <img src="assets/img/logo_bq.svg" alt="Logo Bruno Queirós" class="branding">
-        <nav>
+        <nav class="menu">
             <ul>
                 <li>
                     <a href="javascript:;"> Jobs </a>
@@ -46,15 +46,57 @@
     <main class="container">
         <section id="presentation">
             <h1> 
-                Hey, sou o Bruno <br/>
-                Designer de Produtos Digitais 👋
+                Hey, sou o Bruno 👋 <br/>
+                Designer de Produtos Digitais 
             </h1>
             <p>
-                Ajudo empresas e clientes a chegarem no próximo nível em seus produtos, com pesquisa, validação e interfaces incríveis. Quer saber mais? Confira meus trabalhos 👇
+                Ajudo empresas e clientes a chegarem no próximo nível em seus produtos, com pesquisa, validação e interfaces incríveis. Quer saber mais? <a href="#"> Confira meus trabalhos 👇 </a>
             </p>
         </section>
         <section id="jobs-done">
             <h2> Projetos realizados </h2>
+            <div class="row">
+                <div class="col-12 col-md-6 job">
+                    <div class="job-img">
+
+                    </div>
+                    <div class="job-link">
+                        <h3> CNN Brasil </h3>
+                        <span> </span>
+                    </div>
+
+                </div>
+                <div class="col-12 col-md-6 job">
+                    <div class="job-img">
+
+                    </div>
+                    <div class="job-link">
+                        <h3> Wiseapp </h3>
+                        <span> </span>
+                    </div>
+
+                </div>
+                <div class="col-12 col-md-6 job">
+                    <div class="job-img">
+
+                    </div>
+                    <div class="job-link">
+                        <h3> BANT </h3>
+                        <span> </span>
+                    </div>
+
+                </div>
+                <div class="col-12 col-md-6 job">
+                    <div class="job-img">
+
+                    </div>
+                    <div class="job-link">
+                        <h3> Agência Beebox </h3>
+                        <span> </span>
+                    </div>
+
+                </div>
+            </div>
             
         </section>
         <section id="profile">
