New updates from home page

--- a/v1/index.html
+++ b/v1/index.html
@@ -99,22 +99,29 @@
             </div>
             
         </section>
-        <section id="profile">
-            <h2> Muito Prazer! 🤟 </h2>
+    </main>
+    <section id="profile" class="container-fluid">
+        <div class="container">
+            <div class="author">
+                <div class="foto-perfil-wrap">
+                    <div class="foto-perfil" alt="Foto de perfil do Bruno Queirós"></div>
+                </div>
+                <h2> Muito Prazer! 🤟 </h2>
+            </div>
             <p> Atualmente sou Product Designer na Dasa, uma empresa na área da saúde. Trabalhei em startups/empresas nas áreas de Criptomoedas, Logística, Streaming e Consultoria. </p>
-            <div class="row">
-                <div class="col-md-6 col-12">
+            <div class="row content-list">
+                <div class="col-md-8 col-12">
                     <h3> Últimas Experiências </h3>
 
                 </div>
-                <div class="col-md-6 col-12">
-                    <h3> General Skills </h3>
+                <div class="col-md-4 col-12">
+                    <h3> Skills gerais </h3>
                     <ul>
-                        <li> Product Design </li>
-                        <li> User Experience</li>
+                        <li> Design de Produto </li>
+                        <li> Experiência do Usuário</li>
                         <li> Acessibilidade </li>
-                        <li> Web Design </li>
-                        <li> Design Leadership </li>
+                        <li> UX Metrics </li>
+                        <li> Frontend </li>
                     </ul>
                 </div>
             </div>
@@ -125,14 +132,14 @@
                     <li><a href="#"> LinkedIn</a></li>
                 </ul>
             </div>
-        </section>
-    </main>
+        </div>
+    </section>
     <footer class="container">
-        <div class="row">
+        <div class="row contact">
             <h2> Vamos bater <br/> um papo? 🙌 </h2>
             <a href="#"> Entre em contato </a>
         </div>
-        <div class="row">
+        <div class="row year">
             <span> Bruno Queirós • 2020 </span>
         </div>
     </footer>
