--- a/v1/index.html
+++ b/v1/index.html
@@ -50,7 +50,7 @@
                 Designer de Produtos Digitais 
             </h1>
             <p>
-                Ajudo empresas e clientes a chegarem no próximo nível em seus produtos, com pesquisa, validação e interfaces incríveis. Quer saber mais? <a href="#"> Confira meus trabalhos 👇 </a>
+                Ajudo empresas e clientes a chegarem no próximo nível em seus produtos através do design centrado no usuário. Quer saber mais? <a href="#"> Confira meus trabalhos 👇 </a>
             </p>
         </section>
         <section id="jobs-done">
@@ -62,7 +62,7 @@
                     </div>
                     <div class="job-link">
                         <h3> CNN Brasil </h3>
-                        <span> </span>
+                        <a href="#"></a>
                     </div>
 
                 </div>
@@ -72,7 +72,7 @@
                     </div>
                     <div class="job-link">
                         <h3> Wiseapp </h3>
-                        <span> </span>
+                        <a href="#"></a>
                     </div>
 
                 </div>
@@ -82,7 +82,7 @@
                     </div>
                     <div class="job-link">
                         <h3> BANT </h3>
-                        <span> </span>
+                        <a href="#"></a>
                     </div>
 
                 </div>
@@ -92,7 +92,7 @@
                     </div>
                     <div class="job-link">
                         <h3> Agência Beebox </h3>
-                        <span> </span>
+                        <a href="#"></a>
                     </div>
 
                 </div>
@@ -111,8 +111,25 @@
             <p> Atualmente sou Product Designer na Dasa, uma empresa na área da saúde. Trabalhei em startups/empresas nas áreas de Criptomoedas, Logística, Streaming e Consultoria. </p>
             <div class="row content-list">
                 <div class="col-md-8 col-12">
-                    <h3> Últimas Experiências </h3>
-
+                    <h3> Minhas Experiências </h3>
+                    <ul>
+                        <li>
+                            <h4> Dasa </h4>
+                            <p> 2020 - Product Designer <span class="job-atual"> Atualmente </span> </p>
+                        </li>
+                        <li>
+                            <h4> Agile Content </h4>
+                            <p> 2019/2020 - Sênior Product Designer </p>
+                        </li>
+                        <li>
+                            <h4> FieldCorp </h4>
+                            <p> 2019/2019 - Product Designer </p>
+                        </li>
+                        <li>
+                            <h4> Visual Agency </h4>
+                            <p> 2018/2019 - UI/UX Designer & Frontend </p>
+                        </li>
+                    </ul>
                 </div>
                 <div class="col-md-4 col-12">
                     <h3> Skills gerais </h3>
