--- a/v1/index.html
+++ b/v1/index.html
@@ -32,12 +32,6 @@
         <nav class="menu">
             <ul>
                 <li>
-                    <a href="javascript:;"> Jobs </a>
-                </li>
-                <li>
-                    <a href="javascript:;"> Sobre </a>
-                </li>
-                <li>
                     <a href="javascript:;"> Contato </a>
                 </li>
             </ul>
@@ -57,8 +51,8 @@
             <h2> Projetos realizados </h2>
             <div class="row">
                 <div class="col-12 col-md-6 job">
-                    <div class="job-img">
-
+                    <div class="job-img job-1">
+                    
                     </div>
                     <div class="job-link">
                         <h3> CNN Brasil </h3>
@@ -67,7 +61,7 @@
 
                 </div>
                 <div class="col-12 col-md-6 job">
-                    <div class="job-img">
+                    <div class="job-img job-2">
 
                     </div>
                     <div class="job-link">
@@ -77,7 +71,7 @@
 
                 </div>
                 <div class="col-12 col-md-6 job">
-                    <div class="job-img">
+                    <div class="job-img job-3">
 
                     </div>
                     <div class="job-link">
@@ -87,7 +81,7 @@
 
                 </div>
                 <div class="col-12 col-md-6 job">
-                    <div class="job-img">
+                    <div class="job-img job-4">
 
                     </div>
                     <div class="job-link">
