Style and structure work pages

--- a/v1/index.html
+++ b/v1/index.html
@@ -32,7 +32,7 @@
         <nav class="menu">
             <ul>
                 <li>
-                    <a href="javascript:;"> Contato </a>
+                    <a href="mailto:bqdesigner@outlook.com"> Contato </a>
                 </li>
             </ul>
         </nav>
@@ -56,7 +56,7 @@
                     </div>
                     <div class="job-link">
                         <h3> CNN Brasil </h3>
-                        <a href="#"></a>
+                        <a href="cnn.html"></a>
                     </div>
 
                 </div>
@@ -66,7 +66,7 @@
                     </div>
                     <div class="job-link">
                         <h3> Wiseapp </h3>
-                        <a href="#"></a>
+                        <a href="wiseapp.html"></a>
                     </div>
 
                 </div>
@@ -76,7 +76,7 @@
                     </div>
                     <div class="job-link">
                         <h3> BANT </h3>
-                        <a href="#"></a>
+                        <a href="bant.html"></a>
                     </div>
 
                 </div>
@@ -86,7 +86,7 @@
                     </div>
                     <div class="job-link">
                         <h3> Agência Beebox </h3>
-                        <a href="#"></a>
+                        <a href="beebox.html"></a>
                     </div>
 
                 </div>
@@ -102,26 +102,26 @@
                 </div>
                 <h2> Muito Prazer! 🤟 </h2>
             </div>
-            <p> Atualmente sou Product Designer na Dasa, uma empresa na área da saúde. Trabalhei em startups/empresas nas áreas de Criptomoedas, Logística, Streaming e Consultoria. </p>
+            <p> Atualmente sou Product Designer na Dasa, uma empresa na área da saúde. Já trabalhei em startups e empresas nas áreas de Criptomoedas, Logística, Streaming e Consultoria. </p>
             <div class="row content-list">
                 <div class="col-md-8 col-12">
                     <h3> Minhas Experiências </h3>
                     <ul>
                         <li>
                             <h4> Dasa </h4>
-                            <p> 2020 - Product Designer <span class="job-atual"> Atualmente </span> </p>
+                            <p> 2020 • Product Designer <span class="job-atual"> Atualmente </span> </p>
                         </li>
                         <li>
                             <h4> Agile Content </h4>
-                            <p> 2019/2020 - Sênior Product Designer </p>
+                            <p> 2019/2020 • Sênior Product Designer </p>
                         </li>
                         <li>
                             <h4> FieldCorp </h4>
-                            <p> 2019/2019 - Product Designer </p>
+                            <p> 2019/2019 • Product Designer </p>
                         </li>
                         <li>
                             <h4> Visual Agency </h4>
-                            <p> 2018/2019 - UI/UX Designer & Frontend </p>
+                            <p> 2018/2019 • UI/UX Designer & Frontend </p>
                         </li>
                     </ul>
                 </div>
@@ -148,10 +148,10 @@
     <footer class="container">
         <div class="row contact">
             <h2> Vamos bater <br/> um papo? 🙌 </h2>
-            <a href="#"> Entre em contato </a>
+            <a href="mailto:bqdesigner@outlook.com"> Entre em contato </a>
         </div>
         <div class="row year">
-            <span> Bruno Queirós • 2020 </span>
+            <span> Bruno Queirós • 2021 </span>
         </div>
     </footer>
 
