--- a/v1/index.html
+++ b/v1/index.html
@@ -138,6 +138,7 @@
             </div>
             <div class="row social-media">
                 <ul>
+                    <li> Me siga por aqui também </li>
                     <li><a href="#"> Dribbble </a></li>
                     <li><a href="#"> Behance </a></li>
                     <li><a href="#"> LinkedIn</a></li>
