Publishing my website - adjustments for launch

--- a/v1/index.html
+++ b/v1/index.html
@@ -5,7 +5,7 @@
     <meta name="theme-color" content="#FF6768">
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Bruno Queirós - Product Designer e Frontend Developer" />
+    <meta name="description" content="Bruno Queirós - Product Designer & UI Developer" />
     <meta name="author" content="@itsbrunoqueiros">
     <meta name="keywords" content="Porfolio, UX, UI, frontend, design, designer, design grafico, web design, web designer, publicidade, layout, freela, freelancer, designer freelancer, graphic design, product designer, designer de produto"/>
     <meta name="robots" content="index, follow">
@@ -13,8 +13,8 @@
     <meta property="og:url" content="https://brunoqueiros.me">
     <meta property="og:title" content="Bruno Queirós - Product Designer e Frontend Developer">
     <meta property="og:site_name" content="Portfolio">
-    <meta property="og:description" content="Um novo site chega em breve. Aguarde!">
-    <meta property="og:image" content="https://www.brunoqueiros.me/soon/assets/meta.jpg">
+    <meta property="og:description" content="Designer de Produtos Digitais">
+    <meta property="og:image" content="https://www.brunoqueiros.me/assets/img/meta.jpg">
     <meta property="og:image:type" content="image/jpeg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="620">
@@ -44,7 +44,7 @@
                 Designer de Produtos Digitais 
             </h1>
             <p>
-                Ajudo empresas e clientes a chegarem no próximo nível em seus produtos através do design centrado no usuário. Quer saber mais? <a href="#"> Confira meus trabalhos 👇 </a>
+                Ajudo empresas e clientes a chegarem no próximo nível em seus produtos através do design centrado no usuário. Quer saber mais? <span> Confira meus trabalhos 👇 </span>
             </p>
         </section>
         <section id="jobs-done">
@@ -137,7 +137,7 @@
                     <h3> Skills gerais 😎 </h3>
                     <ul>
                         <li> Design de Produto </li>
-                        <li> Experiência do Usuário</li>
+                        <li> Experiência do Usuário </li>
                         <li> Acessibilidade </li>
                         <li> UX Metrics </li>
                         <li> Frontend </li>
@@ -146,7 +146,7 @@
             </div>
             <div class="row social-media">
                 <ul>
-                    <li> Me siga por aqui também 📢 </li>
+                    <li> Me siga também 📢 </li>
                     <li><a href="#"> Dribbble </a></li>
                     <li><a href="#"> Behance </a></li>
                     <li><a href="#"> LinkedIn</a></li>
