Acessibily updates, content updates

--- a/v1/index.html
+++ b/v1/index.html
@@ -112,7 +112,7 @@
             </div>
             <p> Atualmente sou Product Designer na Dasa, uma empresa na área da saúde. Já trabalhei em startups e empresas nas áreas de Criptomoedas, Logística, Streaming e Consultoria. </p>
             <div class="row content-list">
-                <div class="col-md-8 col-12">
+                <div class="col-md-6 col-12">
                     <h3> Minhas Experiências 🏀 </h3>
                     <ul>
                         <li>
@@ -133,14 +133,32 @@
                         </li>
                     </ul>
                 </div>
-                <div class="col-md-4 col-12">
+                <div class="col-md-4 col-12 mb-3">
                     <h3> Skills gerais 😎 </h3>
                     <ul>
-                        <li> Design de Produto </li>
-                        <li> Experiência do Usuário </li>
-                        <li> Acessibilidade </li>
+                        <li> UI & UX Design </li>
+                        <li> Product Design </li>
                         <li> UX Metrics </li>
                         <li> Frontend </li>
+                        <li> Visual Design </li>
+                        <li> UI Prototyping </li>
+                        <li> Wireframing </li>
+                        <li> Workshops & Dinâmicas colaborativas </li>
+                    </ul>
+                </div>
+                <div class="col-md-2 col-12">
+                    <h3> Tools 🛠 </h3>
+                    <ul>
+                        <li> Figma </li>
+                        <li> Sketch </li>
+                        <li> Adobe XD </li>
+                        <li> HotJar </li>
+                        <li> Google Analytics </li>
+                        <li> Photoshop </li>
+                        <li> Illustrator </li>
+                        <li> Premiere </li>
+                        <li> After Effects </li>
+                        <li> VS Code </li>
                     </ul>
                 </div>
             </div>
