--- a/v1/beebox.html
+++ b/v1/beebox.html
@@ -101,7 +101,7 @@
     <footer class="container">
         <div class="row contact">
             <h2> Vamos bater <br/> um papo? 🙌 </h2>
-            <a href="mailto:bqdesigner@outlook.com"> Entre em contato </a>
+            <a href="mailto:bqdesigner@outlook.com"> Entre em contato 📧 </a>
         </div>
         <div class="row year">
             <span> Bruno Queirós • 2021 </span>
